--- a/fl_web_app/core/templates/core/scheda_detail.html
+++ b/fl_web_app/core/templates/core/scheda_detail.html
@@ -4,22 +4,29 @@
 <h4>Dettaglio Scheda di Lavorazione</h4>
     <div class="card mt-4">
         <div class="card-header">
-            <h5>Scheda n. {{ scheda.id_scheda }}</h5>
+            <h5>Scheda n. {{ scheda.id_scheda }} del {{ scheda.created_at }}</h5>
         </div>
         <div class="card-body">
-            <p><strong>Data Creazione:</strong> {{ scheda.created_at }}</p>
-            <p><strong>Cliente:</strong> {{ scheda.idcliente }}</p>
-            <p><strong>Gruppo:</strong> {{ scheda.idgruppo }}</p>
+            <div class="row">
+                <div class="col">
+                    <p class="mb-1"><strong>Cliente:</strong> {{ scheda.idcliente }}</p>
+                    <p class="mb-1"><strong>Articolo:</strong> {{ scheda.idgruppo }}</p>
+                    <p class="mb-1"><strong>Colore:</strong> {{ scheda.idcolore }}</p>
+                    <p class="mb-1"><strong>Stampa:</strong> {{ scheda.idtipostampa }}</p>
+                    <p class="mb-1"><strong>Fase:</strong> {{ scheda.idfase }}</p>
+                    <p><strong>Riferimenti:</strong> {{ scheda.rif_ddt }}</p>
 
-            <!-- Mostra il codice a barre -->
-            <div>
-                <h6>Codice a Barre:</h6>
-                <img src="data:image/png;base64,{{ barcode_image }}" alt="Codice a Barre">
-            </div>
+                </div>
+                <div class="col">
+                    <h6>Codice a Barre:</h6>
+                    <img src="data:image/png;base64,{{ barcode_image }}" alt="Codice a Barre">
+                    
+                </div>
+            </div>            
             
         </div>
-        <div class="card-footer">
-            <a href="{% url 'home' %}" class="btn btn-secondary">Torna alla lista</a>
+        <div class="card-footer text-center">
+            <a href="{% url 'home' %}" class="btn btn-primary">Torna alla lista</a>
         </div>
     </div>
 {% endblock %}
