--- a/fl_web_app/core/templates/core/partials/_navbar.html
+++ b/fl_web_app/core/templates/core/partials/_navbar.html
@@ -2,6 +2,76 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">FL di Xompero Dario | 4.0</a>
       
+
+      <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          
+
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                >Lista Utenti <span class="sr-only">(current)</span></a
+              >
+            </li>
+            {% if request.user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                {{ request.user.username }}
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a
+                  class="dropdown-item"
+                  href="{% url 'user_profile' username=request.user.username %}"
+                  >Profilo</a
+                >
+                <a class="dropdown-item" href="{% url 'password_change' %}"
+                  >Aggiorna Password</a
+                >
+                <div class="dropdown-divider"></div>
+                <!-- django < 5.0 -->
+                <!-- <a class="dropdown-item" href="{% url 'logout' %}">Esci</a> -->
+
+                <!-- django >= 5.0 -->
+                <form method="POST" action="{% url 'logout' %}">
+                  {% csrf_token %}
+                  <button class="dropdown-item" type="submit">Esci</button>
+                </form>
+              </div>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                >Registrazione</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
+
+
+
+
       
     </div>
   </nav>
