Aggiunte le note

--- a/fl_web_app/core/templates/core/partials/_navbar.html
+++ b/fl_web_app/core/templates/core/partials/_navbar.html
@@ -39,7 +39,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a
                   class="dropdown-item"
-                  href="{% url 'user_profile' username=request.user.username %}"
+                  href="#"
                   >Profilo</a
                 >
                 <a class="dropdown-item" href="{% url 'password_change' %}"
