Fixed messages and navbar

--- a/fl_web_app/core/templates/core/partials/_navbar_old.html
+++ b/fl_web_app/core/templates/core/partials/_navbar_old.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #208b3a;">
+<nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">FL di Xompero Dario | 4.0</a>
       
