--- a/fl_web_app/core/templates/core/partials/_messages.html
+++ b/fl_web_app/core/templates/core/partials/_messages.html
@@ -1,4 +1,4 @@
-<div class="fixed-bottom-message" id="message-container"></div>
+<div class="fixed-bottom-message" id="message-container">
     {% if messages %}
         {% for message in messages %}
             <div id="message" class="container">
