--- a/fl_web_app/core/templates/core/scheda_lavorazione_list.html
+++ b/fl_web_app/core/templates/core/scheda_lavorazione_list.html
@@ -4,7 +4,7 @@
     <h4>Lista delle Schede di Lavorazione</h4>
     
         <table class="table table-striped table-hover">
-            <thead>
+            <thead class="table-header-custom">
               <tr>
                 <th scope="col">Scheda n.</th>
                 <th scope="col">Data Scheda</th>
@@ -12,7 +12,7 @@
                 <th scope="col">Articolo</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody class="table-group-divider">
             {% for scheda in schede %}
             <tr onclick="window.location='{% url 'core:scheda_detail' scheda.id_scheda %}';" style="cursor: pointer;">
 
